--- a/Ham_Menu/css/main.css
+++ b/Ham_Menu/css/main.css
@@ -1,78 +1,89 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 body {
-  overflow: hidden;
-  font-family: sans-serif; }
+    overflow: hidden;
+    font-family: sans-serif;
+}
 
 ul,
 li {
-  list-style: none; }
+    list-style: none;
+}
 
 .navigation {
-  border: 5px solid black;
-  width: 100%;
-  height: 100vh;
-  position: relative; }
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
 
 .ham {
-  width: 70px;
-  height: 70px;
-  display: block;
-  position: fixed;
-  right: 30px;
-  top: 30px;
-  border-radius: 50%;
-  background-color: #ee0979;
-  z-index: 2000; }
+    width: 70px;
+    height: 70px;
+    display: block;
+    position: fixed;
+    right: 30px;
+    top: 30px;
+    border-radius: 50%;
+    background-color: #ee0979;
+    z-index: 2000;
+}
 
 .menu {
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  right: 35px;
-  top: 35px;
-  background-color: #ff6a00;
-  border-radius: 50%;
-  transition: .5s;
-  z-index: 1000; }
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    right: 35px;
+    top: 35px;
+    background-color: #ff6a00;
+    border-radius: 50%;
+    transition: .5s;
+    z-index: 1000;
+}
 
 input[id="ham"] {
-  display: none; }
+    display: none;
+}
 
-#ham:checked ~ .menu {
-  transform: scale(80); }
+#ham:checked~.menu {
+    transform: scale(80);
+}
 
-#ham:checked ~ .menu__ul {
-  opacity: 1;
-  visibility: visible;
-  transition-delay: .2s; }
+#ham:checked~.menu__ul {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: .2s;
+}
 
 .menu__ul {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1500;
-  opacity: 0;
-  visibility: hidden; }
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1500;
+    opacity: 0;
+    visibility: hidden;
+}
 
 .menu__ul__list {
-  font-size: 25px;
-  width: 200px;
-  padding: 20px 0;
-  text-align: center;
-  margin-bottom: 10px;
-  cursor: pointer;
-  background-image: linear-gradient(105deg, transparent 50%, white 50%);
-  background-size: 210%;
-  transition: all .3s;
-  color: white;
-  text-transform: uppercase; }
+    font-size: 25px;
+    width: 200px;
+    padding: 20px 0;
+    text-align: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+    background-image: linear-gradient(105deg, transparent 50%, white 50%);
+    background-size: 210%;
+    transition: all .3s;
+    color: white;
+    text-transform: uppercase;
+}
 
 .menu__ul__list:hover {
-  background-position-x: -220px;
-  transform: translateX(20px);
-  color: black; }
+    background-position-x: -220px;
+    transform: translateX(20px);
+    color: black;
+}
